--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>Daniella's Sweets</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
-<link href="./main.550dcf66.css" rel="stylesheet">
+  <title>Daniella's Sweets</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/cup.png">
+
+  <link href="./main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body> <!-- Add your content of header -->
@@ -32,19 +37,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+        
       </div>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav justify-content-end ">
-          <li class="nav-item"><a class="nav-link fw-bold navb" href="./index.html" title="">Home</a></li>
-          <li class="nav-item"><a class="nav-link navb" href="./menu.html" title="">Menu</a></li>
-          <li class="nav-item"><a class="nav-link navb" href="./gallery.html" title="">Gallery</a></li>
-          <li class="nav-item"><a class="nav-link navb" href="./order.html" title="">How to Order</a></li>
-          <li class="nav-item">
-            <p>
-              <a href="./contact.html" class="nav-link btn btn-default navbar-btn navb" title="">Contact us</a>
-            </p>
-          </li>
+      <div class="collapse navbar-collapse" id="navbar-collapse">    
+        <ul class="nav justify-content-end">
+            <li class="nav-item"><a class="nav-link fw-bold navb" href="./index.html" title="">Home</a></li>
+            <li class="nav-item"><a class="nav-link navb" href="./prices.html" title="">Prices</a></li>
+            <li class="nav-item"><a class="nav-link navb" href="./gallery.html" title="">Gallery</a></li>
+            <li class="nav-item"><a class="nav-link navb" href="./order.html" title="">How to Order</a></li>
+            <li class="nav-item">
+              <p>
+                <a href="./contact.html" class="nav-link btn btn-default navbar-btn navb" title="">Contact us</a>
+              </p>
+            </li>
         </ul>
       </div> 
 
@@ -54,16 +60,15 @@
 
 <!-- Add your site or app content here -->
   <div class="hero-full-container background-image-container white-text-container">
-    <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1>Daniella's Sweets Customized Cakes</h1>
-          <p>EVERY CAKE IS A CELEBRATION!</p>
+          <h1 class="lobstr">Daniella's Sweets Customized Cakes</h1>
           <br>
-          <a href="./project.html" class="btn btn-default btn-lg navb" title="">Discover</a>
+          <p class="display-5">EVERY CAKE IS A CELEBRATION!</p>
+          <br>
+          <img src="assets/images/cake.png" class="cake animate__animated animate__fadeInLeft" alt="">
         </div>
       </div>
-    </div>
   </div>
 
   <div class="section-container">
@@ -72,9 +77,12 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
             <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus at sem quis varius. 
-            <br>
-            Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus iaculis magna sagittis elit sagittis, at hendrerit lorem venenatis. Morbi accumsan iaculis blandit. Cras ultrices hendrerit nisl.</p>
+            <p><strong>Daniella's Sweets Customized Cakes </strong> provides <br>
+            customized, home-made cakes and desserts for various occasions.
+            <br><br> Our business is located at 155 C. Benitez St, Cubao, Quezon City, Metro Manila, PH
+            <br><br>
+            Hesitant to order? Don't worry, we're all vaccinated.<br> ✔ Everyone from the baking process up to delivery.
+            </p>
           </div>
        </div>
       </div>
@@ -87,85 +95,30 @@
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-12">
           <h2>Our Products</h2>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuada pulvinar. <br>Vestibulum sit amet hendrerit leo, quis vehicula mi.</p>
+          <p>More icing? Less sugar? More chocolates? <br> Let us know your requests and we'll have it done for you! <br> Enjoy your dessets just the way you like it. </p>
         </div>  
       </div>
       <div class="row">
         <div class="col-xs-12 col-md-4">
-          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./assets/images/cake_1.png" alt="" class="indimg reveal img-fluid reveal-content image-center">
           <h3>Cakes</h3>
-          <h4>UX designer</h4>
-          <p>Sed elementum vehicula nisl, a egestas velit rhoncus nec.Cras vel sapien tincidunt, lacinia risus vel, imperdiet neque.</p>
-          <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-          </p>
         </div>
        
         <div class="col-xs-12 col-md-4">
-          <img src="./assets/images/profil-02.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <img src="./assets/images/cupcake_1.PNG" alt="" class="indimg reveal img-fluid reveal-content image-center">
           <h3>Cup Cakes</h3>
-          <h4>UI designer</h4>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuadav pulvinar. Vestibulum sit amet hendrerit leo, quis vehicula mi.</p>
-          <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-          </p>
         </div>
+
         <div class="col-xs-12 col-md-4">
-          <img src="./assets/images/profil-03.jpg" alt="" class="reveal img-responsive reveal-content image-center">
-          <h3>Cake Toppers</h3>
-          <h4>Developer</h4>
-          <p>Busce rutrum nisi non dui placerat sodales. Vivamus feugiat rutrum malesuada. Nulla volutpat sapien ac gravida varius</p>
-          <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
+          <img src="./assets/images/topper_1.PNG" alt="" class="indimg reveal img-fluid reveal-content image-center">
+          <h3>Piñata Cakes and Toppers</h3>
+        </div>
+
+        <div class="mt-5">
+          <p>Prices vary depending on the size and design.
+            Please check out our <strong><a href="./prices.html">prices page</a></strong> for more details.
           </p>
         </div>
-      </div>
-    </div>
-  </div>
-
-  
-
-  <div class="section-container">
-    <div class="container text-center">
-      <div class="row section-container-spacer">
-        <div class="col-xs-12 col-md-12">
-          <a href="./project.html" class="btn btn-secondary btn-lg navb" title="">Discover</a>
-        </div>  
-      </div>
-    </div>
-  </div>
-
-  <div class="section-container">
-    <div class="container text-center">
-      <div class="row section-container-spacer">
-        <div class="col-xs-12 col-md-12">
-          <h2 class="text-center">Customers</h2>
-          <p>Praesent at feugiat est, at faucibus ipsum. Aenean condimentum mauris vel malesuada pulvinar. <br>Vestibulum sit amet hendrerit leo, quis vehicula mi.</p>
-        </div>  
       </div>
     </div>
   </div>
@@ -184,19 +137,16 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="row">
-          <div class="col-xs-12 col-sm-7">
+          <div class="col-xs-12 col-sm-7 pt-1">
             <p class="text-white">© Daniella's Sweets Customized Cakes, 2022</p>
           </div>
           <div class="col-xs-12 col-sm-5">
-            <p class="text-right">
-              <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+            <p class="text-right"> Follow us in Facebook and Instagram
+              <a href="https://www.facebook.com/daniellassweetsanddesserts/" class="ms-2 me-2 social-round-icon white-round-icon fa-icon" target="_blank" title="">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon white-round-icon fa-icon" target="_blank" title="">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </p>
           </div>
@@ -213,20 +163,7 @@
   });
 </script>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="./main.0cf8b554.js"></script>
+<script type="text/javascript" src="./main.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
