--- a/prices.html
+++ b/prices.html
@@ -52,12 +52,12 @@
           </div>
           <div class="col nav justify-content-end">
             <li class="nav-item"><a class="nav-link navb" href="./index.html" title="">Home</a></li>
-            <li class="nav-item"><a class="nav-link navb" href="./prices.html" title="">Prices</a></li>
+            <li class="nav-item"><a class="nav-link fw-bold navb" href="./prices.html" title="">Prices</a></li>
             <li class="nav-item"><a class="nav-link navb" href="./gallery.html" title="">Gallery</a></li>
             <li class="nav-item"><a class="nav-link navb" href="./order.html" title="">How to Order</a></li>
             <li class="nav-item">
               <p>
-                <a href="./contact.html" class="nav-link fw-bold navb btn btn-default navbar-btn" title="">Contact us</a>
+                <a href="./contact.html" class="nav-link navb btn btn-default navbar-btn" title="">Contact us</a>
               </p>
             </li>
           </div>
@@ -68,75 +68,61 @@
   </nav>
 </header>
 
-<!-- Add your site or app content here -->
-  <div class="hero-full-container">
-    <div class="row">
-      <div class="col-xs-12 col-md-12">
-        <div class="section-container-spacer">
-          <h1 class="text-center animate__animated animate__fadeInRight">Contact us</h1>
-          <p class="text-center">Need more information? Message us using the form below.</p>
+<div class="hero-full-container pb-0">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <h1 class="text-center animate__animated animate__fadeInRight">Prices</h1>
+          <p class="text-center">Prices vary and are subject to change depending on the design and size. <br> Please see below for base prices.</p>
+       </div>
+      </div>
+  </div>
+
+  <div class="row justify-content-center">
+    <div class="col-6 car">
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/1.png" class="d-block w-100" alt="...">
         </div>
-        <div class="card-container">
-          <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
-            <form action="https://formsubmit.co/venibonnie@gmail.com" method="POST">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Email address (optional)"> 
-                  </div>
-                  <input type="hidden" name="_next" value="/thanks.html">
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="_subject" id="subject" placeholder="Subject" autocomplete="off">
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="3" placeholder="Enter your message" required></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Send message</button>                
-                  <input type="hidden" name="_captcha" value="false">
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <ul class="list-icons pt-4">
-                        <li><a href="https://www.facebook.com/daniellassweetsanddesserts/" class="social-round-icon fa-icon" target="_blank">
-                            <i class="fa fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li><a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon fa-icon" target="_blank">
-                            <i class="fa fa-instagram"></i>
-                            </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-
-                </div>
-
-                    <div class="col-md-5">
-                      <ul class="list-unstyled address-container">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          +63 977 215 0905
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-o" aria-hidden="true"></i>
-                          </span>
-                          155 C. Benitez St, Cubao, Quezon City, Metro Manila, PH
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.626837303497!2d121.04661031392745!3d14.620321180514786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7c76c5bb8a3%3A0x21e26fa727de2ee2!2s155%20C.%20Benitez%20St%2C%20Cubao%2C%20Quezon%20City%2C%201109%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1643713449120!5m2!1sen!2sph" width="310" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="card-image col-xs-12">
-              </div>
-            </div>
-          </div>  
+        <div class="carousel-item">
+          <img src="assets/images/2.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets/images/3.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
+  </div>
+
+
+  <div class="section-container">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <div class="text-center">
+            <h2><a href="./gallery.html">More photos?</a></strong></h2>
+            <p>Please also browse through our <strong><a href="./gallery.html">gallery</a></strong> for more photos and customized ideas.
+            </p>
+          </div>
+       </div>
+      </div>
+    </div>
+  </div>
+
 
   <footer class="footer-container white-text-container">
     <div class="container">
