--- a/thanks.html
+++ b/thanks.html
@@ -73,70 +73,21 @@
     <div class="row">
       <div class="col-xs-12 col-md-12">
         <div class="section-container-spacer">
-          <h1 class="text-center animate__animated animate__fadeInRight">Contact us</h1>
-          <p class="text-center">Need more information? Message us using the form below.</p>
+          <h1 class="text-center animate__animated animate__fadeInRight">Thank you for your message!</h1>
         </div>
+
         <div class="card-container">
           <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
-            <form action="https://formsubmit.co/venibonnie@gmail.com" method="POST">
-              <div class="row">
-                <div class="col-md-7">
-                  <div class="form-group">
-                    <input type="email" class="form-control" name="email" id="email" placeholder="Email address (optional)"> 
-                  </div>
-                  <input type="hidden" name="_next" value="/thanks.html">
-                  <div class="form-group">
-                    <input type="text" class="form-control" name="_subject" id="subject" placeholder="Subject" autocomplete="off">
-                  </div>
-                  <div class="form-group">
-                    <textarea class="form-control" name="message" rows="3" placeholder="Enter your message" required></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Send message</button>                
-                  <input type="hidden" name="_captcha" value="false">
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <ul class="list-icons pt-4">
-                        <li><a href="https://www.facebook.com/daniellassweetsanddesserts/" class="social-round-icon fa-icon" target="_blank">
-                            <i class="fa fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li><a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon fa-icon" target="_blank">
-                            <i class="fa fa-instagram"></i>
-                            </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-
-                </div>
-
-                    <div class="col-md-5">
-                      <ul class="list-unstyled address-container">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                          +63 977 215 0905
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-o" aria-hidden="true"></i>
-                          </span>
-                          155 C. Benitez St, Cubao, Quezon City, Metro Manila, PH
-                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.626837303497!2d121.04661031392745!3d14.620321180514786!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7c76c5bb8a3%3A0x21e26fa727de2ee2!2s155%20C.%20Benitez%20St%2C%20Cubao%2C%20Quezon%20City%2C%201109%20Metro%20Manila!5e0!3m2!1sen!2sph!4v1643713449120!5m2!1sen!2sph" width="310" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </form>
-              </div>
-              <div class="card-image col-xs-12">
-              </div>
-            </div>
-          </div>  
+            <p class="text-center">We've received your message and appreciate you reaching out. We'll get back to you in a jiffy. <br>
+              Looking forward to make your dream cake! 🥰
+              Thank you and keep safe!</p>
+          </div>
+        <div class="card-image col-xs-12">
+      </div>
     </div>
+  </div>  
   </div>
+</div>
 
   <footer class="footer-container white-text-container">
     <div class="container">
