--- a/order.html
+++ b/order.html
@@ -77,7 +77,7 @@
                 <div class="ps-5 p-2 mt-4 bd-highlight">
                   <div class="row">
                     <img src="assets/images/cupcake.png" class="cup" alt="">
-                    <p class="col pt-2"><strong>Step 1. </strong> Decide on your order.</p>
+                    <p class="col pt-2"><strong>Step 1. </strong> Decide on your order or obtain a photo of your desired cake design. (You can check designs online)</p>
                   </div>
                 </div>
           
