updated email address

--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </div>
         <div class="card-container">
           <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
-            <form action="https://formsubmit.co/venibonnie@gmail.com" method="POST">
+            <form action="https://formsubmit.co/willangelinereyes@gmail.com" method="POST">
               <div class="row">
                 <div class="col-md-7">
                   <div class="form-group">
