--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
                   <div class="form-group">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Email address (optional)"> 
                   </div>
-                  <input type="hidden" name="_next" value="https://veni-thee.github.io/daniellassweets/thanks.html">
+                  <input type="hidden" name="_next" value="https://daniellassweets.epizy.com/thanks.html">
                   <div class="form-group">
                     <input type="text" class="form-control" name="_subject" id="subject" placeholder="Subject" autocomplete="off">
                   </div>
