--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </header>
 
 <!-- Add your site or app content here -->
-  <div class="hero-full-container background-image-container white-text-container">
+  <div class="hero-full-container background-image-container ">
       <div class="row">
         <div class="col-xs-12">
           <h1 class="lobstr">Daniella's Sweets Customized Cakes</h1>
@@ -132,20 +132,20 @@
   });
 </script>
 
-<footer class="footer-container white-text-container">
+<footer class="footer-container">
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
         <div class="row">
           <div class="col-xs-12 col-sm-7 pt-1">
-            <p class="text-white">© Daniella's Sweets Customized Cakes, 2022</p>
+            <p>© Daniella's Sweets Customized Cakes, 2022</p>
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right"> Follow us in Facebook and Instagram
-              <a href="https://www.facebook.com/daniellassweetsanddesserts/" class="ms-2 me-2 social-round-icon white-round-icon fa-icon" target="_blank" title="">
+              <a href="https://www.facebook.com/daniellassweetsanddesserts/" class="ms-2 me-2 social-round-icon black-round-icon fa-icon" target="_blank" title="">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon white-round-icon fa-icon" target="_blank" title="">
+              <a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon black-round-icon fa-icon" target="_blank" title="">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
             </p>
