--- a/thanks.html
+++ b/thanks.html
@@ -89,29 +89,29 @@
   </div>
 </div>
 
-  <footer class="footer-container white-text-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
-            <div class="col-xs-12 col-sm-7 pt-1">
-              <p class="text-white">© Daniella's Sweets Customized Cakes, 2022</p>
-            </div>
-            <div class="col-xs-12 col-sm-5">
-              <p class="text-right"> Follow us in Facebook and Instagram
-                <a href="https://www.facebook.com/daniellassweetsanddesserts/" class="ms-2 me-2 social-round-icon white-round-icon fa-icon" target="_blank" title="">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon white-round-icon fa-icon" target="_blank" title="">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-              </p>
-            </div>
+<footer class="footer-container">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="row">
+          <div class="col-xs-12 col-sm-7 pt-1">
+            <p>© Daniella's Sweets Customized Cakes, 2022</p>
+          </div>
+          <div class="col-xs-12 col-sm-5">
+            <p class="text-right"> Follow us in Facebook and Instagram
+              <a href="https://www.facebook.com/daniellassweetsanddesserts/" class="ms-2 me-2 social-round-icon black-round-icon fa-icon" target="_blank" title="">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+              <a href="https://www.instagram.com/daniellassweetscustomizedcakes/" class="social-round-icon black-round-icon fa-icon" target="_blank" title="">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
