Update to correct typo

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta content="width=device-width,initial-scale=1" name="viewport">
-  <meta content="description" name="description">
+  <meta content="description" name="Daniella's Sweets Customized Cakes offers a variety of customized, home-made cakes and desserts for various occasions.">
+  <meta name="keywords" content="Daniella's Cakes Desserts Sweets Toppers Bridal Cakes">
+  <meta name="author" content="Veni Di Gonzales">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -95,7 +96,7 @@
       <div class="row section-container-spacer">
         <div class="col-xs-12 col-md-12">
           <h2>Our Products</h2>
-          <p>More icing? Less sugar? More chocolates? <br> Let us know your requests and we'll have it done for you! <br> Enjoy your dessets just the way you like it. </p>
+          <p>More icing? Less sugar? More chocolates? <br> Let us know your requests and we'll have it done for you! <br> Enjoy your desserts just the way you like it. </p>
         </div>  
       </div>
       <div class="row">
